[package]
name = "WorkshopWhisperer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = "0.33.0"
csv = "1.4.0"
time = { version = "0.3.44", features = ["formatting"] }
rfd = "0.15.4"